# py-snippet

./: .env  ahocora.py  datetime_process.py  dbconf.py  hookimport.py  progressbar.py  pyproject.toml  resolve_domain.py  resolve_ip.py  tool.py  xmlrpc_timeout.py  动态加载模块.py  发送邮件.py  持久化研究.py  画图.py
DjangoTools/: filters.py  rediscache.py
DjangoTools/geoip_v2/: apps.py  functions.py  geoip.tgz  import_geoip.sql  models.py
DjangoTools/middleware/: alloworigin.py  exception_handler.py  harmonized.py
DjangoTools/websocket/: asgi.py  nft.py  websocket.py
DjangoTools/分表/: models.py  sharding.py  stats.py
Log/: logutil.py  redislog.py  zmqlog_redispool.py  zmqlog_simplepool.py
ansible/: ansible.cfg  ansiblenote.txt  hosts
browser_automation/: playwright_demo.py  selenium_chrome.py  selenium_firefox.py
celery/: celery.py  celery_chord.py  celery_retry.py  generic.py  multi.txt
compile/: cython_onefile.py  cython_perfile.py  nuitka_compile.sh  setup.py
fake_data/: bulk_create.py  django_factoryboy.py  makesomedata.py  sqlalchemy_factoryboy.py
fastapidemo/: api.py  db.py  main.py  models.py  pagination.py  schemas.py  settings.py  utils.py
fastapidemo/response/: __init__.py  base.py  exceptions.py  generic.py
gnutls/: usegnutls.py
gui/pywin32/: checkexeversion.py  优雅退出.py  清理托盘.py  窗口操作.py  鼠标滑过移除图标.py
gui/tray/: clash.py  clash.ui  clash_ui.py  pyproject.toml
myunittest/: t_user.py
orm/: sa_dml.py  sa_pgtype.py  sa_relationship.py  sa_typical_scenarios.py  sa_utils.py
orm/peewee/: db_model.py  dml.py
pandas/: memory.txt
pandas/resarch/: main_cache.py  main_cache_noloop.py  main_lmdb.py  test_frank.py  test_frank_preview.py  test_load_preview.py
parallel/: README.md  pyproject.toml
parallel/dask_pandas/: anonymous.py  dask_util.py  dataset_util.py  df_operator.py  make_parquet.py
parallel/parallel_computing/: README.md  basic_dask.py  basic_ray.py  basic_vaex.py  pmap.py
parallel/shared_memory/: dask_lmdb.py  shared_memory.md
parallel/shared_memory/落选/: common.py  dask_dict.py  dask_mp.py  dask_ray.py  dask_series.py  mp_manager_howto.py  mp_object_howto.py  plasma_howto.py
web3utils/: dbmodel.py  fetch_token.py  收集.py
web3utils/abi/: __init__.py  detect.py  (+6 more)
协程/: async_pg_howto.py  relaydns_asyncio.py
后台运行/: linux_daemon.py  win_demo.py  win_service.py
性能分析/: testmem.py
表格/: excel_menu.py  excel交互.py  table.py
视频/: onvif.py  recordcam.py  rtsp.py
(+9 files in other folders)
