[tool.poetry]
name = "parallel"
version = "0.1.0"
description = ""
authors = ["me"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

lmdb = ">=1.4.0"
pyarrow = ">=10.0.1"
numpy = ">=1.24.1"
pandas = ">=1.5.2"
dask = {extras = ["diagnostics", "distributed"], version = ">=2022.12.1"}

tqdm = "^4.64.1"
toolz = "^0.12.0"
loguru = "^0.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
