[tool.poetry]
name = "clash_venv"
version = "0.1.0"
description = ""
authors = ["uuip <uuip@users.noreply.github.com>"]

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.poetry.dependencies]
python = "~3.10.4"
PyYAML = "^6.0"
requests = "^2.27.1"
PySide6 = "^6.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
